# million

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build_example.bat  build_release.bat  install_deps.bat  readme.md  vcpkg.disable.json  vcpkg.json
descgen/: CMakeLists.txt
descgen/include/: Conv.h
descgen/include/descgen/: Config.h  Conv.h
example/: CMakeLists.txt  example.cpp  example_config.yaml  game.cpp  game_config.yaml
example/logs/: log_2024-11-04_15.txt
milinet/: CMakeLists.txt  milinet.cpp  milinet.h  module.cpp  module.h  module_mgr.h  msg_executor.cpp  msg_executor.h  msg_mgr.cpp  msg_mgr.h  service.h  service_mgr.cpp  service_mgr.h  worker.cpp  worker.h  worker_mgr.h
milinet/detail/: dl.h  time_wheel.hpp
milinet/net/: connection.cpp  connection.h  connection_handle.h  packet.h  server.cpp  server.h
million/: CMakeLists.txt  io_context.cpp  io_context.h  io_context_mgr.cpp  io_context_mgr.h  million.cpp  million.h  module.cpp  module.h  module_mgr.h  msg_executor.cpp  msg_executor.h  msg_mgr.cpp  msg_mgr.h  service.cpp  service.h  service_mgr.cpp  service_mgr.h  worker.cpp  worker.h  worker_mgr.cpp  worker_mgr.h
million/detail/: dl.cpp  dl.h  time_wheel.hpp
million/include/million/: api.h  cpp_message.h  cpp_msg.h  event.h  event_mgr.h  exception.h  imillion.h  imsg.h  imsg_discard.h  iservice.h  logger.h  message.h  module_def.h  msg.h  node_def.h  noncopyable.h  nonnull_ptr.h  proto.h  proto_codec.h  proto_field_any.h  proto_message.h  proto_mgr.h  proto_msg.h  seata_snowflake.hpp  service_handle.h  service_lock.h  session_def.h  task.h  task.hpp
million/protogen/cs/: cs_msgid.pb.cc  cs_msgid.pb.h  cs_user.pb.cc  cs_user.pb.h
million/protogen/db/: db_options.pb.cc  db_options.pb.h  db_user.pb.cc  db_user.pb.h
million/src/: CMakeLists.txt  event_mgr.cpp  imillion.cpp  io_context.cpp  io_context.h  io_context_mgr.cpp  io_context_mgr.h  logger.cpp  logger.h  million.cpp  million.h  million_msg.h  module.cpp  module.h  module_mgr.cpp  module_mgr.h  msg_executor.cpp  msg_executor.h  msg_mgr.cpp  msg_mgr.h  proto_codec.cpp  proto_mgr.cpp  proto_msg.cpp  seata_snowflake.hpp  service.cpp  service.h  service_core.cpp  service_core.h  service_handle.cpp  service_impl.cpp  service_impl.h  service_lock.cpp  service_mgr.cpp  service_mgr.h  session_mgr.cpp  session_mgr.h  session_monitor.cpp  session_monitor.h  task_executor.cpp  task_executor.h  (+6 more)
million/src/detail/: dl.cpp  dl.h  heap_timer.hpp  time_wheel.hpp  wheel_timer.hpp
million/src/internal/: dl.cpp  dl.h  heap_timer.hpp  wheel_timer.hpp
million/src/logger/: logger.cpp  logger.h
million/src/net/: tcp_connection.cpp  tcp_server.cpp
module/: CMakeLists.txt  test.cpp
module/agent/: CMakeLists.txt
module/agent/src/: agent.cpp  agent_mgr_service.h  agent_service.h  module.cpp
module/cluster/: CMakeLists.txt
module/cluster/src/: cluster_server.h  cluster_service.h  cs_proto_mgr.h  module.cpp  node_session.cpp  node_session.h  token.h  user_session.cpp  user_session.h
module/config/: CMakeLists.txt
module/config/src/: config.cpp  module.cpp
module/db/: CMakeLists.txt  cache.h  db.h  entry.cpp  main.cpp  sql.h
module/db/proto/: message.pb.cc  message.pb.h  message.proto
module/db/src/: cache.h  cache_service.h  db.h  db_row.cpp  db_service.h  module.cpp  sql.h  sql_service.h
module/desc/: CMakeLists.txt
module/desc/src/: module.cpp
module/etcd/: ASYNC_REFACTOR.md  CMakeLists.txt  README.md  example.cpp  example_settings.yaml  example_usage.cpp
module/etcd/src/: api.cpp  config_discovery_service.cpp  config_discovery_service.h  etcd_service.cpp  etcd_service.h  module.cpp
module/gateway/: CMakeLists.txt  main.cpp
module/gateway/net/: connection.cpp  connection.h  connection_handle.h  server.cpp  server.h  tcp_connection.cpp  tcp_connection_handle.h  tcp_server.cpp  tcp_server.h
module/gateway/src/: agent.cpp  cs_proto_mgr.h  gateway_server.h  gateway_service.cpp  gateway_service.h  (+7 more)
module/jssvr/: CMakeLists.txt  JSConfigService_README.md
module/logger/: CMakeLists.txt  main.cpp
module/pysvr/: CMakeLists.txt  cpp.cpp  main.cpp  module.cpp
module/table/: CMakeLists.txt
module_src/gateway/: CMakeLists.txt  main.cpp
module_src/js_service/: CMakeLists.txt  main.cpp
module_src/net_service/: CMakeLists.txt  main.cpp
module_src/py_service/: CMakeLists.txt  main.cpp
module_src/pysvr/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  build.bat
proto/agent/: ss_agent.proto
proto/cluster/: ss_cluster.proto
proto/comm/: msg_options.proto
proto/config/: ss_config.proto
proto/cs/: cs_example.proto  cs_msgid.proto  cs_test.proto  cs_user.proto  csguild.pb.cc  csguild.pb.h  csguild.proto  csmsgid.pb.cc  csmsgid.pb.h  csmsgid.proto  cspackage.pb.cc  cspackage.pb.h  cspackage.proto
proto/db/: db_example.proto  db_options.proto  db_test.proto  db_user.proto  ss_db.proto
proto/desc/: desc.proto
proto/etcd/: ss_etcd.proto
proto/gateway/: ss_gateway.proto
proto/jssvr/: ss_jssvr.proto
proto/module/: module_id.proto
proto/node/: ss_node.proto
proto/ss/: ss_cluster.proto  ss_gateway.proto  ss_logger.proto  ss_msg.proto  ss_msgid.proto  ss_service.proto  ss_test.proto
proto/table/: example.proto  table.proto
proto/test/: cs_test.proto  db_example.proto  ss_test.proto
protogen/: .gitignore  CMakeLists.txt  api.h  proto_meta.h  protogen.cpp  protogen.h
protogen/src/: protogen.cpp
service_src/net_service/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  milinet.cpp  module.cpp  msg_executor.cpp  msg_mgr.cpp  service.cpp  service_mgr.cpp  worker.cpp  worker_mgr.cpp
src/detail/: dl.cpp
test/cluster_test/: CMakeLists.txt  cluster_test.cpp  cluster_test_config.yaml  cluster_test_settings.yaml
test/db_test/: CMakeLists.txt  db_test.cpp  db_test_config.yaml  db_test_settings.yaml
test/jssvr_test/: CMakeLists.txt  example.py  jssvr_test.cpp  jssvr_test_config.yaml  jssvr_test_settings.yaml
test/pysvr_test/: CMakeLists.txt  pysvr_test.cpp  pysvr_test_config.yaml
test/table_test/: CMakeLists.txt  table_test.cpp  table_test_config.yaml
(+173 files in other folders)
