add_subdirectory(logger)
add_subdirectory(cluster)
add_subdirectory(db)
add_subdirectory(config)
add_subdirectory(gateway)
add_subdirectory(agent)
add_subdirectory(jssvr)
add_subdirectory(etcd)

add_executable(sbtest test.cpp)
target_link_libraries(sbtest PRIVATE million::third_party::etcd-cpp-apiv3)